[metadata]
name = ha-matter-server
author = Stefan Agner
description = Home Assistant Matter Server
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
version = 0.0.1
url = https://github.com/home-assistant/matter-server
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Environment :: Console
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Home Automation
license_files = LICENSE.txt

[options.entry_points]
console_scripts =
    ha-matter-server = matter_server.__main__:main

[options]
python_requires = >= 3.9
install_requires =
  click
  uvicorn
  fastapi
  fastapi_websocket_rpc
